[gd_scene load_steps=11 format=3 uid="uid://dble4r6wqwie0"]

[ext_resource type="Texture2D" uid="uid://bqwah2lwca82q" path="res://art/item/roguelikeitems.png" id="1_4v4lx"]
[ext_resource type="Script" uid="uid://cwprl6y00glen" path="res://scripts/item_detail.gd" id="1_r4opd"]
[ext_resource type="Texture2D" uid="uid://dowwr4xftnwam" path="res://art/Inventory/UI_Frames.png" id="1_sbljv"]
[ext_resource type="Texture2D" uid="uid://boy0sa1mcrkwv" path="res://art/Inventory/UI_Buttons.png" id="2_sbljv"]
[ext_resource type="Texture2D" uid="uid://bljrxkc58kxgr" path="res://art/Inventory/UI_ALL.png" id="4_shp6i"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7hdxn"]
atlas = ExtResource("1_4v4lx")
region = Rect2(178, 64, 13, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_iqvu1"]
atlas = ExtResource("4_shp6i")
region = Rect2(51, 195, 10, 9)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_64ojw"]
content_margin_left = 10.0
content_margin_top = 0.0
content_margin_right = 10.0
content_margin_bottom = 0.0
texture = SubResource("AtlasTexture_iqvu1")

[sub_resource type="AtlasTexture" id="AtlasTexture_mbf6i"]
atlas = ExtResource("2_sbljv")
region = Rect2(1, 209, 30, 14)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0p6ab"]
content_margin_left = 40.0
content_margin_top = 15.0
content_margin_right = 40.0
content_margin_bottom = 15.0
texture = SubResource("AtlasTexture_mbf6i")
expand_margin_bottom = 10.0

[node name="ItemDetail" type="MarginContainer"]
custom_minimum_size = Vector2(0, 100)
theme_override_constants/margin_right = 0
script = ExtResource("1_r4opd")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 2
texture = ExtResource("1_sbljv")
region_rect = Rect2(247, 7, 34, 34)
patch_margin_left = 5
patch_margin_top = 10
patch_margin_right = 9
patch_margin_bottom = 6

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(803, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/margin_left = 30
theme_override_constants/margin_right = 10

[node name="Icon" type="TextureRect" parent="HBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(40, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = SubResource("AtlasTexture_7hdxn")

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(585, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 160
theme_override_constants/margin_right = 160
theme_override_constants/margin_bottom = 5

[node name="NamePathVBox" type="VBoxContainer" parent="HBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="NameMargin" type="MarginContainer" parent="HBoxContainer/MarginContainer2/NamePathVBox"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/MarginContainer2/NamePathVBox/NameMargin"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
text = "Name:Health potion"

[node name="PathMargin" type="MarginContainer" parent="HBoxContainer/MarginContainer2/NamePathVBox"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/MarginContainer2/NamePathVBox/PathMargin"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/MarginContainer2/NamePathVBox/PathMargin/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
text = "合成路径：caoyao*6haiyouhenduo"
justification_flags = 162

[node name="Button" type="Button" parent="HBoxContainer/MarginContainer2/NamePathVBox/PathMargin/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_styles/normal = SubResource("StyleBoxTexture_64ojw")

[node name="MarginContainer3" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 25

[node name="Button" type="Button" parent="HBoxContainer/MarginContainer3"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxTexture_0p6ab")
text = "合成
"
alignment = 0

[node name="MaterialsPopup" type="PopupPanel" parent="."]
visible = true

[node name="PanelContainer" type="PanelContainer" parent="MaterialsPopup"]
offset_left = 4.0
offset_top = 4.0
offset_right = 96.0
offset_bottom = 96.0

[node name="VBoxContainer" type="VBoxContainer" parent="MaterialsPopup/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MaterialsPopup/PanelContainer/VBoxContainer"]
layout_mode = 2
